# yosys-rtl

./: CHANGELOG.md  LICENSE  README.md  yosys-rtl.cabal
.github/workflows/: haskell.yml
data/Yosys/Rtl/golden/: add.pretty  led.pretty
lib/Yosys/: Rtl.hs
test/: Main.hs
test/Test/Yosys/: .Rtl.hs.swp  Rtl.hs
