cabal-version:      3.0
name:               yosys-rtl
version:            0.1.0.0
synopsis:           Yosys RTL Intermediate Language
description:        Definition and prettyprinter
homepage:           https://github.com/standardsemiconductor/yosys-rtl
license:            MIT
license-file:       LICENSE
author:             dopamane
maintainer:         dwc1295@gmail.com
copyright:          David Cox
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

library
  ghc-options:      -Wall
  exposed-modules:  Yosys.Rtl
  build-depends:    base ^>=4.19.1.0
                  , prettyprinter
                  , text
  hs-source-dirs:   lib
  default-language: Haskell2010

test-suite test
  ghc-options:      -Wall -threaded
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  other-modules:    Test.Yosys.Rtl
  build-depends:    base ^>=4.19.1.0
                  , extra
                  , filepath
                  , prettyprinter
                  , process
                  , tasty
                  , tasty-golden
                  , tasty-hunit
                  , text
                  , yosys-rtl
